--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">firebaseapp</string>
     <string name="title_activity_testmap">Map</string>
+    <string name="title_activity_read_map">Map</string>
 </resources>
